[tool.poetry]
name = "ai-log-analyzer"
description = "AI Log Intelligence & Incident Detection System - RAG-powered log analysis with LangChain, ChromaDB, and semantic chunking"
version = "0.1.0"
authors = ["Sahil"]
scripts = { ai-log-analyze = "lza-analyze" }

[tool.poetry.dependencies]
python = "^3.8"
# Add other dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"